// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileTree theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <div
    aria-label="Manuscript files"
    aria-multiselectable="false"
    class="rh-file-tree"
    id="rh-filetree-ID"
    role="tree"
  >
    <div
      aria-expanded="true"
      aria-level="1"
      aria-posinset="1"
      aria-selected="false"
      aria-setsize="2"
      class="rh-file-tree__row"
      data-kind="dir"
      data-path="manuscript"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 0 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down rh-icon"
          data-icon="chevron-down"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-folder-open rh-icon"
        data-icon="folder-open"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 14 1.5-2.9A2 2 0 0 1 9.24 10H20a2 2 0 0 1 1.94 2.5l-1.54 6a2 2 0 0 1-1.95 1.5H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h3.9a2 2 0 0 1 1.69.9l.81 1.2a2 2 0 0 0 1.67.9H18a2 2 0 0 1 2 2v2"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        manuscript
      </span>
      <span
        class="rh-visually-hidden"
      >
        Folder
      </span>
    </div>
    <div
      aria-level="2"
      aria-posinset="1"
      aria-selected="true"
      aria-setsize="3"
      class="rh-file-tree__row is-selected"
      data-kind="tex"
      data-path="manuscript/main.tex"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 1 * var(--rh-space-4));"
      tabindex="0"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-file-code rh-icon"
        data-icon="file-code"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="M10 12.5 8 15l2 2.5"
        />
        <path
          d="m14 12.5 2 2.5-2 2.5"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        main.tex
      </span>
      <span
        class="rh-visually-hidden"
      >
        LaTeX source
      </span>
      <span
        class="rh-file-tree__marker"
        data-tone="dirty"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pen-line rh-icon"
          data-icon="pen-line"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 21h8"
          />
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
        </svg>
        Unsaved
      </span>
    </div>
    <div
      aria-level="2"
      aria-posinset="2"
      aria-selected="false"
      aria-setsize="3"
      class="rh-file-tree__row"
      data-kind="bib"
      data-path="manuscript/refs.bib"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 1 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-book-marked rh-icon"
        data-icon="book-marked"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2v8l3-3 3 3V2"
        />
        <path
          d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        refs.bib
      </span>
      <span
        class="rh-visually-hidden"
      >
        Bibliography
      </span>
    </div>
    <div
      aria-expanded="false"
      aria-level="2"
      aria-posinset="3"
      aria-selected="false"
      aria-setsize="3"
      class="rh-file-tree__row"
      data-kind="dir"
      data-path="manuscript/sections"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 1 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right rh-icon"
          data-icon="chevron-right"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-folder rh-icon"
        data-icon="folder"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        sections
      </span>
      <span
        class="rh-visually-hidden"
      >
        Folder
      </span>
    </div>
    <div
      aria-level="1"
      aria-posinset="2"
      aria-selected="false"
      aria-setsize="2"
      class="rh-file-tree__row"
      data-kind="other"
      data-path="notes.md"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 0 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-file rh-icon"
        data-icon="file"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        notes.md
      </span>
      <span
        class="rh-visually-hidden"
      >
        File
      </span>
    </div>
  </div>
</div>
`;

exports[`FileTree theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <div
    aria-label="Manuscript files"
    aria-multiselectable="false"
    class="rh-file-tree"
    id="rh-filetree-ID"
    role="tree"
  >
    <div
      aria-expanded="true"
      aria-level="1"
      aria-posinset="1"
      aria-selected="false"
      aria-setsize="2"
      class="rh-file-tree__row"
      data-kind="dir"
      data-path="manuscript"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 0 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down rh-icon"
          data-icon="chevron-down"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-folder-open rh-icon"
        data-icon="folder-open"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 14 1.5-2.9A2 2 0 0 1 9.24 10H20a2 2 0 0 1 1.94 2.5l-1.54 6a2 2 0 0 1-1.95 1.5H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h3.9a2 2 0 0 1 1.69.9l.81 1.2a2 2 0 0 0 1.67.9H18a2 2 0 0 1 2 2v2"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        manuscript
      </span>
      <span
        class="rh-visually-hidden"
      >
        Folder
      </span>
    </div>
    <div
      aria-level="2"
      aria-posinset="1"
      aria-selected="true"
      aria-setsize="3"
      class="rh-file-tree__row is-selected"
      data-kind="tex"
      data-path="manuscript/main.tex"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 1 * var(--rh-space-4));"
      tabindex="0"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-file-code rh-icon"
        data-icon="file-code"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="M10 12.5 8 15l2 2.5"
        />
        <path
          d="m14 12.5 2 2.5-2 2.5"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        main.tex
      </span>
      <span
        class="rh-visually-hidden"
      >
        LaTeX source
      </span>
      <span
        class="rh-file-tree__marker"
        data-tone="dirty"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pen-line rh-icon"
          data-icon="pen-line"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 21h8"
          />
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
        </svg>
        Unsaved
      </span>
    </div>
    <div
      aria-level="2"
      aria-posinset="2"
      aria-selected="false"
      aria-setsize="3"
      class="rh-file-tree__row"
      data-kind="bib"
      data-path="manuscript/refs.bib"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 1 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-book-marked rh-icon"
        data-icon="book-marked"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2v8l3-3 3 3V2"
        />
        <path
          d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        refs.bib
      </span>
      <span
        class="rh-visually-hidden"
      >
        Bibliography
      </span>
    </div>
    <div
      aria-expanded="false"
      aria-level="2"
      aria-posinset="3"
      aria-selected="false"
      aria-setsize="3"
      class="rh-file-tree__row"
      data-kind="dir"
      data-path="manuscript/sections"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 1 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right rh-icon"
          data-icon="chevron-right"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-folder rh-icon"
        data-icon="folder"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        sections
      </span>
      <span
        class="rh-visually-hidden"
      >
        Folder
      </span>
    </div>
    <div
      aria-level="1"
      aria-posinset="2"
      aria-selected="false"
      aria-setsize="2"
      class="rh-file-tree__row"
      data-kind="other"
      data-path="notes.md"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 0 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-file rh-icon"
        data-icon="file"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        notes.md
      </span>
      <span
        class="rh-visually-hidden"
      >
        File
      </span>
    </div>
  </div>
</div>
`;

exports[`FileTree theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <div
    aria-label="Manuscript files"
    aria-multiselectable="false"
    class="rh-file-tree"
    id="rh-filetree-ID"
    role="tree"
  >
    <div
      aria-expanded="true"
      aria-level="1"
      aria-posinset="1"
      aria-selected="false"
      aria-setsize="2"
      class="rh-file-tree__row"
      data-kind="dir"
      data-path="manuscript"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 0 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down rh-icon"
          data-icon="chevron-down"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-folder-open rh-icon"
        data-icon="folder-open"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 14 1.5-2.9A2 2 0 0 1 9.24 10H20a2 2 0 0 1 1.94 2.5l-1.54 6a2 2 0 0 1-1.95 1.5H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h3.9a2 2 0 0 1 1.69.9l.81 1.2a2 2 0 0 0 1.67.9H18a2 2 0 0 1 2 2v2"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        manuscript
      </span>
      <span
        class="rh-visually-hidden"
      >
        Folder
      </span>
    </div>
    <div
      aria-level="2"
      aria-posinset="1"
      aria-selected="true"
      aria-setsize="3"
      class="rh-file-tree__row is-selected"
      data-kind="tex"
      data-path="manuscript/main.tex"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 1 * var(--rh-space-4));"
      tabindex="0"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-file-code rh-icon"
        data-icon="file-code"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="M10 12.5 8 15l2 2.5"
        />
        <path
          d="m14 12.5 2 2.5-2 2.5"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        main.tex
      </span>
      <span
        class="rh-visually-hidden"
      >
        LaTeX source
      </span>
      <span
        class="rh-file-tree__marker"
        data-tone="dirty"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pen-line rh-icon"
          data-icon="pen-line"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 21h8"
          />
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
        </svg>
        Unsaved
      </span>
    </div>
    <div
      aria-level="2"
      aria-posinset="2"
      aria-selected="false"
      aria-setsize="3"
      class="rh-file-tree__row"
      data-kind="bib"
      data-path="manuscript/refs.bib"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 1 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-book-marked rh-icon"
        data-icon="book-marked"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2v8l3-3 3 3V2"
        />
        <path
          d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        refs.bib
      </span>
      <span
        class="rh-visually-hidden"
      >
        Bibliography
      </span>
    </div>
    <div
      aria-expanded="false"
      aria-level="2"
      aria-posinset="3"
      aria-selected="false"
      aria-setsize="3"
      class="rh-file-tree__row"
      data-kind="dir"
      data-path="manuscript/sections"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 1 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right rh-icon"
          data-icon="chevron-right"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-folder rh-icon"
        data-icon="folder"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        sections
      </span>
      <span
        class="rh-visually-hidden"
      >
        Folder
      </span>
    </div>
    <div
      aria-level="1"
      aria-posinset="2"
      aria-selected="false"
      aria-setsize="2"
      class="rh-file-tree__row"
      data-kind="other"
      data-path="notes.md"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 0 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-file rh-icon"
        data-icon="file"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        notes.md
      </span>
      <span
        class="rh-visually-hidden"
      >
        File
      </span>
    </div>
  </div>
</div>
`;

exports[`FileTree theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <div
    aria-label="Manuscript files"
    aria-multiselectable="false"
    class="rh-file-tree"
    id="rh-filetree-ID"
    role="tree"
  >
    <div
      aria-expanded="true"
      aria-level="1"
      aria-posinset="1"
      aria-selected="false"
      aria-setsize="2"
      class="rh-file-tree__row"
      data-kind="dir"
      data-path="manuscript"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 0 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down rh-icon"
          data-icon="chevron-down"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-folder-open rh-icon"
        data-icon="folder-open"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 14 1.5-2.9A2 2 0 0 1 9.24 10H20a2 2 0 0 1 1.94 2.5l-1.54 6a2 2 0 0 1-1.95 1.5H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h3.9a2 2 0 0 1 1.69.9l.81 1.2a2 2 0 0 0 1.67.9H18a2 2 0 0 1 2 2v2"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        manuscript
      </span>
      <span
        class="rh-visually-hidden"
      >
        Folder
      </span>
    </div>
    <div
      aria-level="2"
      aria-posinset="1"
      aria-selected="true"
      aria-setsize="3"
      class="rh-file-tree__row is-selected"
      data-kind="tex"
      data-path="manuscript/main.tex"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 1 * var(--rh-space-4));"
      tabindex="0"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-file-code rh-icon"
        data-icon="file-code"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
        <path
          d="M10 12.5 8 15l2 2.5"
        />
        <path
          d="m14 12.5 2 2.5-2 2.5"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        main.tex
      </span>
      <span
        class="rh-visually-hidden"
      >
        LaTeX source
      </span>
      <span
        class="rh-file-tree__marker"
        data-tone="dirty"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pen-line rh-icon"
          data-icon="pen-line"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 21h8"
          />
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
        </svg>
        Unsaved
      </span>
    </div>
    <div
      aria-level="2"
      aria-posinset="2"
      aria-selected="false"
      aria-setsize="3"
      class="rh-file-tree__row"
      data-kind="bib"
      data-path="manuscript/refs.bib"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 1 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-book-marked rh-icon"
        data-icon="book-marked"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2v8l3-3 3 3V2"
        />
        <path
          d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        refs.bib
      </span>
      <span
        class="rh-visually-hidden"
      >
        Bibliography
      </span>
    </div>
    <div
      aria-expanded="false"
      aria-level="2"
      aria-posinset="3"
      aria-selected="false"
      aria-setsize="3"
      class="rh-file-tree__row"
      data-kind="dir"
      data-path="manuscript/sections"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 1 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right rh-icon"
          data-icon="chevron-right"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-folder rh-icon"
        data-icon="folder"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        sections
      </span>
      <span
        class="rh-visually-hidden"
      >
        Folder
      </span>
    </div>
    <div
      aria-level="1"
      aria-posinset="2"
      aria-selected="false"
      aria-setsize="2"
      class="rh-file-tree__row"
      data-kind="other"
      data-path="notes.md"
      role="treeitem"
      style="padding-inline-start: calc(var(--rh-space-2) + 0 * var(--rh-space-4));"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rh-file-tree__twisty"
      />
      <svg
        aria-hidden="true"
        class="lucide lucide-file rh-icon"
        data-icon="file"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
        />
        <path
          d="M14 2v5a1 1 0 0 0 1 1h5"
        />
      </svg>
      <span
        class="rh-file-tree__name"
      >
        notes.md
      </span>
      <span
        class="rh-visually-hidden"
      >
        File
      </span>
    </div>
  </div>
</div>
`;
